--- a/src/app/page-about-mobile/page-about-mobile.component.html
+++ b/src/app/page-about-mobile/page-about-mobile.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <h1>About</h1>
+<div class="container about-mobile-bg">
+    <h1>About Me</h1>
     <div class="alltabs">
         <div class="tab" id="self" [ngClass]="{'active':isSelf}">
             <div class="heading" (click)="toggle('self')">
@@ -16,9 +16,10 @@
                 <span>Myself</span>
                 <div class="bar"></div>
             </div>
-            <div class="desc" style="font-size: 17px; text-align:start; padding:25px 10px 30px 30px">Hi, <br>I'm Sandip Gupta, a 24-year-old Full Stack Developer crafting digital experiences that make an impact. I transform complex challenges into elegant solutions through clean code and innovative thinking.
-                <br><br>At Zycus, I'm not just writing code – I'm building the future of enterprise software. My passion lies in creating scalable applications that don't just work, but inspire.
-                <br><br>Let's build something extraordinary together.
+            <div class="desc myself-desc">
+                <p>Hi, I'm Sandip Gupta, a 24-year-old Full Stack Developer passionate about crafting digital experiences that make an impact. I transform complex challenges into elegant solutions through clean code and innovative thinking.</p>
+                <p>At <strong>Zycus</strong>, I'm not just writing code – I'm building the future of enterprise software. My passion lies in creating scalable applications that don't just work, but inspire.</p>
+                <p>Let's build something extraordinary together.</p>
             </div>
         </div>
         <div class="tab" id="edu" [ngClass]="{'active':isEdu}">
