--- a/src/app/page-contact/page-contact.component.html
+++ b/src/app/page-contact/page-contact.component.html
@@ -1,68 +1,95 @@
 <div class="main">
     <h1>Contact</h1>
     <div class="container">
+        <div class="profile-header">
+            <img src="https://avatars.githubusercontent.com/u/9919?s=200&v=4" alt="Profile Photo" class="profile-img" />
+            <div class="profile-actions">
+                <!-- <a href="/assets/resume.pdf" download class="btn-profile" (click)="popup()">Download Resume</a> -->
+                <a class="btn-profile" (click)="popup()">Download Resume</a>
+                <button type="button" class="btn-email" (click)="copyEmail()">Copy Email</button>
+                <div class="social-label">Online Presence</div>
+                <div class="social-links">
+                    <div class="icon">
+                        <a href="https://github.com/Strangedip" title="GitHub" target="_blank" aria-label="GitHub">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
+                                stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path
+                                    d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="icon">
+                        <a href="https://www.linkedin.com/in/strangedip/" title="LinkedIn" target="_blank"
+                            aria-label="LinkedIn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
+                                stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path
+                                    d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
+                                <path d="M8 11l0 5" />
+                                <path d="M8 8l0 .01" />
+                                <path d="M12 16l0 -5" />
+                                <path d="M16 16v-3a2 2 0 0 0 -4 0" />
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="icon">
+                        <a href="https://www.hackerrank.com/profile/Strangedip" title="HackerRank" target="_blank"
+                            aria-label="HackerRank">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
+                                stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path
+                                    d="M19.875 6.27a2.225 2.225 0 0 1 1.125 1.948v7.284c0 .809 -.443 1.555 -1.158 1.948l-6.75 4.27a2.269 2.269 0 0 1 -2.184 0l-6.75 -4.27a2.225 2.225 0 0 1 -1.158 -1.948v-7.285c0 -.809 .443 -1.554 1.158 -1.947l6.75 -3.98a2.33 2.33 0 0 1 2.25 0l6.75 3.98h-.033z" />
+                                <path d="M10 16v-8m4 0v8" />
+                                <path d="M10 12h4" />
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="icon">
+                        <a href="https://leetcode.com/Strangedip/" title="LeetCode" target="_blank"
+                            aria-label="LeetCode">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
+                                stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M12 13h7.5" />
+                                <path d="M9.424 7.268l4.999 -4.999" />
+                                <path
+                                    d="M16.633 16.644l-2.402 2.415a3.189 3.189 0 0 1 -4.524 0l-3.77 -3.787a3.223 3.223 0 0 1 0 -4.544l3.77 -3.787a3.189 3.189 0 0 1 4.524 0l2.302 2.313" />
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="icon">
+                        <a href="mailto:sg02295@gmail.com" aria-label="Email" title="Mail me">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
+                            stroke-width="0.8" stroke="currentColor" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                                <path
+                                    d="M19.5,2H4.5C2.019,2,0,4.019,0,6.5v11c0,2.481,2.019,4.5,4.5,4.5h15c2.481,0,4.5-2.019,4.5-4.5V6.5c0-2.481-2.019-4.5-4.5-4.5ZM4.5,3h15c1.084,0,2.043,.506,2.686,1.283l-7.691,7.692c-.662,.661-1.557,1.025-2.497,1.025-.914-.017-1.826-.36-2.492-1.025L1.814,4.283c.643-.777,1.601-1.283,2.686-1.283Zm18.5,14.5c0,1.93-1.57,3.5-3.5,3.5H4.5c-1.93,0-3.5-1.57-3.5-3.5V6.5c0-.477,.097-.931,.271-1.346l7.528,7.528c.851,.851,1.98,1.318,3.177,1.318s2.375-.467,3.226-1.318l7.528-7.528c.174,.415,.271,.869,.271,1.346v11Z" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="hello-box">
-            <h3>Interesting? <br> let's have conversation.</h3> <h3> Get in touch and say Hello!</h3>
+            <h3>Interesting? <br> Let's have a conversation.</h3>
+            <h3>Get in touch and say Hello!</h3>
             <div class="hello-btn">
-                <a href="mailto:your.email@example.com" target="_blank">
-                    <button type="button" href="mailto:s02295@gmail.com">
+                <a href="mailto:sg02295@gmail.com" target="_blank">
+                    <button type="button">
                         <h3>Say hello!</h3>
                     </button>
                 </a>
             </div>
         </div>
-        <div class="social">
-            <div class="icon"><a href="https://github.com/Strangedip" title="GitHub" target="_blank"> <button> <svg
-                            xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
-                            stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
-                            stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                            <path
-                                d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
-                        </svg></button></a>
-            </div>
-            <div class="icon"><a href="https://www.linkedin.com/in/strangedip/" title="LinkedIn" target="_blank"> <button> <svg
-                            xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
-                            stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
-                            stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                            <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
-                            <path d="M8 11l0 5" />
-                            <path d="M8 8l0 .01" />
-                            <path d="M12 16l0 -5" />
-                            <path d="M16 16v-3a2 2 0 0 0 -4 0" />
-                        </svg>
-                    </button>
-                </a>
-            </div>
-            <div class="icon"><a href="https://www.hackerrank.com/profile/Strangedip" title="HackerRank" target="_blank"> <button> <svg
-                            xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
-                            stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
-                            stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                            <path
-                                d="M19.875 6.27a2.225 2.225 0 0 1 1.125 1.948v7.284c0 .809 -.443 1.555 -1.158 1.948l-6.75 4.27a2.269 2.269 0 0 1 -2.184 0l-6.75 -4.27a2.225 2.225 0 0 1 -1.158 -1.948v-7.285c0 -.809 .443 -1.554 1.158 -1.947l6.75 -3.98a2.33 2.33 0 0 1 2.25 0l6.75 3.98h-.033z" />
-                            <path d="M10 16v-8m4 0v8" />
-                            <path d="M10 12h4" />
-                        </svg>
-                    </button>
-                </a>
-            </div>
-            <div class="icon"><a href="https://leetcode.com/Strangedip/" title="LeetCode" target="_blank"> <button> <svg
-                            xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
-                            stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
-                            stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                            <path d="M12 13h7.5" />
-                            <path d="M9.424 7.268l4.999 -4.999" />
-                            <path
-                                d="M16.633 16.644l-2.402 2.415a3.189 3.189 0 0 1 -4.524 0l-3.77 -3.787a3.223 3.223 0 0 1 0 -4.544l3.77 -3.787a3.189 3.189 0 0 1 4.524 0l2.302 2.313" />
-                        </svg>
-                    </button>
-                </a>
-            </div>
-        </div>
+
     </div>
-    
+
     <div class="footer">Made in Freetime with &#x2764; by Strangedip :D</div>
 </div>
