--- a/src/app/page-intro/page-intro.component.html
+++ b/src/app/page-intro/page-intro.component.html
@@ -1,8 +1,9 @@
 <div class="main">
+    <div class="intro-bg"></div>
     <div class="intro">
         <div class="text-container">
             <div class="hello">
-                <h3>Hello world</h3>
+                <h3>Hello World</h3>
             </div>
             <div class="iam">
                 <h3>I am</h3>
@@ -15,6 +16,9 @@
             </div>
             <div class="role">
                 <h3>Web / Software Developer</h3>
+            </div>
+            <div class="subheadline">
+                <h4>Building digital solutions with code & creativity</h4>
             </div>
         </div>
     </div>
