--- a/src/app/page-projects/page-projects.component.scss
+++ b/src/app/page-projects/page-projects.component.scss
@@ -149,6 +149,14 @@ a {
     justify-content: center;
     margin-top: 1rem;
     text-align: center;
+
+    &.two-buttons {
+        justify-content: space-around;
+    }
+
+    &.one-button {
+        justify-content: center;
+    }
 }
 
 .btn-action {
