--- a/src/app/page-contact/page-contact.component.html
+++ b/src/app/page-contact/page-contact.component.html
@@ -5,9 +5,9 @@
             <img src="https://avatars.githubusercontent.com/u/9919?s=200&v=4" alt="Profile Photo" class="profile-img" />
             <div class="profile-actions">
                 <!-- <a href="/assets/resume.pdf" download class="btn-profile" (click)="popup()">Download Resume</a> -->
-                <a class="btn-profile" (click)="popup()">Download Resume</a>
+                <a href="/assets/SandipGuptaResume-20250608.pdf" download class="btn-profile">Download Resume</a>
                 <button type="button" class="btn-email" (click)="copyEmail()">Copy Email</button>
-                <div class="social-label">Online Presence</div>
+                <div class="social-label">Online Connects</div>
                 <div class="social-links">
                     <div class="icon">
                         <a href="https://github.com/Strangedip" title="GitHub" target="_blank" aria-label="GitHub">
